--- a/homepage.html
+++ b/homepage.html
@@ -10,17 +10,17 @@
 <body>
    <!-- header -->
     <header>
-        <a href="" class="logo">Travel<span>Sphere</span></a> 
+        <a href="homepage.html" class="logo">Travel<span>Sphere</span></a> 
         <nav class="navigation">
-            <a href="-home">Home</a>
+            <a href="homepage.html">Home</a>
             <a href="booking.html">Book</a>
-            <a href="-packages">Holiday Packages</a>
-            <a href="-contact">Contact Us</a>
+            <a href="package.html">Holiday Packages</a>
+            <a href="contactus.html">Contact Us</a>
         </nav>
 
         <div class="icon">
             <i class='bx bx-search' id="search"></i>
-            <a href="file:///D:/JIIT/College/sem%203/DBMS/project/code/travel_login.html">
+            <a href="travel_login.html">
                 <i class='bx bxs-user-circle' id="user"></i>
             </a>
         </div>
@@ -49,6 +49,18 @@
 
         <div class="vid">
             <video src="D:\JIIT\College\sem 3\DBMS\project\media\3115738-hd_1280_720_24fps.mp4" id="video" loop autoplay muted></video>
+        </div>
+     </section>
+
+     <!-- top picks slide -->
+
+     <!-- footer -->
+
+     <section class="footer">
+        <div class="line_container">
+            <div class="line">
+                
+            </div>
         </div>
      </section>
 
