--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
         </nav>
 
         <div class="icon">
-            <i class='bx bx-search' id="search"></i>
+            <i  id="search"></i>
             <a href="travel_login.html">
                 <i class='bx bxs-user-circle' id="user"></i>
             </a>
@@ -41,14 +41,14 @@
         </div>
 
         <div class="controls">
-            <span class="vid_control active" data-src="https://videos.pexels.com/video-files/3115738/3115738-uhd_2560_1440_24fps.mp4"></span>
-            <span class="vid_control" data-src="https://videos.pexels.com/video-files/2231485/2231485-uhd_2560_1440_24fps.mp4"></span>
-            <span class="vid_control" data-src="https://cdn.pixabay.com/video/2019/04/01/22512-328261507_large.mp4"></span>
-            <span class="vid_control" data-src="https://videos.pexels.com/video-files/857195/857195-hd_1280_720_25fps.mp4"></span>
+            <span class="vid_control active" data-src="media\vid3.mp4"></span>
+            <span class="vid_control" data-src="media\vid1.mp4"></span>
+            <span class="vid_control" data-src="media\vid2.mp4"></span>
+            <span class="vid_control" data-src="media\vid4.mp4"></span>
         </div>
 
         <div class="vid">
-            <video src="D:\JIIT\College\sem 3\DBMS\project\media\3115738-hd_1280_720_24fps.mp4" id="video" loop autoplay muted></video>
+            <video src="media\vid3.mp4" id="video" loop autoplay muted></video>
         </div>
      </section>
 
