--- a/package.html
+++ b/package.html
@@ -16,12 +16,11 @@
         <nav class="navigation">
             <a href="homepage.html">Home</a>
             <a href="booking.html">Book</a>
-            <a href="packages.html">Holiday Packages</a>
+            <a href="package.html">Holiday Packages</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
 
         <div class="icon">
-            <i class='bx bx-search' id="search"></i>
             <a href="travel_login.html">
                 <i class='bx bxs-user-circle' id="user"></i>
             </a>
